fix: form label background overflow

--- a/resources/sass/components/form/text.scss
+++ b/resources/sass/components/form/text.scss
@@ -36,17 +36,21 @@
         border: var(--input-text-border-active);
 
         & + .form__label--floating {
-            top: -11px;
+            top: -3px;
             font-size: 11px;
             color: var(--label-fg-active);
+            border-radius: 0;
+            padding: 0 4px;
         }
     }
 
     &:valid:not(:placeholder-shown),
     &:focus:placeholder-shown {
         & + .form__label--floating {
-            top: -11px;
+            top: -3px;
             font-size: 11px;
+            border-radius: 0;
+            padding: 0 4px;
         }
     }
 
